# os-labs

01/: 01.sln  CMakeLists.txt
01/SecretFunction/: CMakeLists.txt  IsPrime.cpp  SecretFunction.cpp
01/SecretFunctionTests/: SecretFunctionTests.cpp  SecretFunctionTests.vcxproj  SecretFunctionTests.vcxproj.filters  main.cpp
01/linux-commands/: commands.sh
01/sys-info-crossplatform/: CMakeLists.txt  SysInfo.cpp  SysInfo.h  sys-info-crossplatform.cpp  sys-info-crossplatform.h
01/sys-info-linux/: sys-info-linux.cpp  sys-info-linux.vcxproj
01/sys-info-win/: sys-info-win.cpp  sys-info-win.vcxproj  sys-info-win.vcxproj.filters
02/: 02.sln  CMakeLists.txt
02/flip-case/: flip-case.cpp  flip-case.vcxproj
02/list-process-linux/: CHandle.h  list-process-linux.cpp  list-process-linux.vcxproj
02/list-processes-win/: list-processes-win.cpp  list-processes-win.vcxproj  list-processes-win.vcxproj.filters
02/zombie/: main.cpp  zombie.vcxproj
03/: 03.sln  CMakeLists.txt
03/kill-child/: kill-child.vcxproj  main.cpp
03/signal-handler/: CMakeLists.txt  signal-handler.cpp  signal-handler.h
04/: 04.sln
04/flip-case/: flip-case.cpp  flip-case.vcxproj  flip-case.vcxproj.filters
04/tic-tac/: Time.h  tic-tac.cpp  tic-tac.vcxproj  tic-tac.vcxproj.filters
lw10/: CMakeLists.txt  lw10.sln
lw10/py/: task1.py
lw10/quadricsolver/: CMakeLists.txt  quadricsolver.cpp  quadricsolver.h
lw10/task1/: CMakeLists.txt  main.cpp
lw6/: lw6.sln
lw6/Hystogram/: Hystogram.vcxproj  Hystogram.vcxproj.filters
lw6/MemoryManager/: MemoryManager.h  MemoryManager.vcxproj  main.cpp
lw6/MemoryManagerTests/: MemoryManagerTests.cpp  MemoryManagerTests.vcxproj  MemoryManagerTests.vcxproj.filters
lw7/: lw7.sln
lw7/fsmon/: RAII.h  fsmon.vcxproj  main.cpp
lw7/lw7/: lw7.cpp  lw7.vcxproj  lw7.vcxproj.filters
lw8/: CMakeLists.txt  lw8.sln
lw8/ellipseApp/: Resource.h  ellipseApp.cpp  ellipseApp.rc  ellipseApp.vcxproj  (+1 more)
lw8/snowfall/: CMakeLists.txt  snowfall.cpp  snowfall.h
lw9/: lw9.sln
task1/: 05.sln
(+25 files in other folders)
